@@ -2227,6 +2227,7 @@
 33) kernel: net: graceful exit from netif_alloc_netdev_queues().<br>
 34) kernel: net: ipv6: slight optimization in ip6_dst_gc.<br>
 35) kernel: net: ipv6: make ip -6 route get mark xyz work.<br>
+36) kernel: net: ipv6: update Destination Cache entries when gateway turn into host.<br>
 <br>
 <br>
 <br>
